--- a/htmlSrc/layout/nav.tmpl.html
+++ b/htmlSrc/layout/nav.tmpl.html
@@ -1,12 +1,14 @@
 {{define "nav"}}
 <div class="navbar navbar-fixed-top" role="navigation">
-    <div class="navbar-header">
-        <a class="navbar-brand" href="/">{{.Data.title}}</a>
-    </div>
-    <div class="collapse navbar-collapse">
-        <ul class="nav navbar-nav">
-            <li><a href="/wares">Wares</a></li>
-        </ul>
-    </div>
+	<div class="container">
+		<div class="navbar-header">
+			<a class="navbar-brand" href="/">{{.Data.title}}</a>
+		</div>
+		<div class="collapse navbar-collapse">
+			<ul class="nav navbar-nav">
+				<li><a href="/wares">Wares</a></li>
+			</ul>
+		</div>
+	</div>
 </div>
 {{end}}
