--- a/htmlSrc/layout/footer.tmpl.html
+++ b/htmlSrc/layout/footer.tmpl.html
@@ -1,5 +1,5 @@
 {{define "footer"}}
-<footer role="contentinfo" class="container">
+<footer role="contentinfo" class="container container-fluid">
     <div class="row">
         <div class="col-md-4">
             <div class="container">
