request level content for pages, add language info

--- a/htmlSrc/layout/footer.tmpl.html
+++ b/htmlSrc/layout/footer.tmpl.html
@@ -39,6 +39,15 @@
             </div>
         </div>
     </div>
+    <div class="row">
+        <div class="col-md-4 text-muted small">
+            <dl class="dl-horizontal">
+                <dt>Language:</dt>
+                <dd>{{.Data.lang.Name}}</dd>
+            </dl>
+        </div>
+        <div class="col-md-8"></div>
+    </div>
 </footer>
 <script src="js/jquery-1.10.2.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
