add background color on navbar

--- a/htmlSrc/static/css/xrguide.css
+++ b/htmlSrc/static/css/xrguide.css
@@ -2,6 +2,7 @@ body{
 	padding-top:70px;
 }
 div.navbar{
+    background-color: #272b30;
     background-image:url(/img/header_x_rebirth_01.jpg);
     background-position: top right;
     background-repeat:no-repeat;
