Absolute css locations

--- a/htmlSrc/layout/layout_main.tmpl.html
+++ b/htmlSrc/layout/layout_main.tmpl.html
@@ -4,8 +4,8 @@
 <head>
     <title>{{.Data.title}}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<link rel="stylesheet" href="css/bootstrap.min.css" />
-    <link rel="stylesheet" href="css/xrguide.css" />
+	<link rel="stylesheet" href="/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="/css/xrguide.css" />
 </head>
 {{end}}
 {{define "body_start"}}
