--- a/htmlSrc/layout/footer.tmpl.html
+++ b/htmlSrc/layout/footer.tmpl.html
@@ -49,8 +49,8 @@
         <div class="col-md-8"></div>
     </div>
 </footer>
-<script src="js/jquery-1.10.2.min.js"></script>
-<script src="js/bootstrap.min.js"></script>
+<script src="/js/jquery-1.10.2.min.js"></script>
+<script src="/js/bootstrap.min.js"></script>
 </body>
 </html>
 {{end}}
