--- a/htmlSrc/layout/footer.tmpl.html
+++ b/htmlSrc/layout/footer.tmpl.html
@@ -12,7 +12,7 @@
     <div class="row">
         <div class="col-md-4">
             <div class="container">
-                <p class="text-primary">The Directory</p>
+                <p class="text-primary">XR Guide</p>
                 <ul class="list-unstyled">
                     <li><a href="https://github.com/wongak/xrguide">On GitHub</a></li>
                     <li><a href="https://github.com/wongak/xrguide/issues">Issues</a></li>
