fix layout for mobile devices, add angular.js

--- a/htmlSrc/layout/footer.tmpl.html
+++ b/htmlSrc/layout/footer.tmpl.html
@@ -50,6 +50,7 @@
     </div>
 </footer>
 <script src="/js/jquery-1.10.2.min.js"></script>
+<script src="/js/angular.min.js"></script>
 <script src="/js/bootstrap.min.js"></script>
 </body>
 </html>
