--- a/htmlSrc/layout/nav.tmpl.html
+++ b/htmlSrc/layout/nav.tmpl.html
@@ -1,14 +1,10 @@
 {{define "nav"}}
-<div class="navbar navbar-fixed-top" role="navigation">
-	<div class="container">
-		<div class="navbar-header">
-			<a class="navbar-brand" href="/">{{.Data.title}}</a>
-		</div>
-        <ul class="nav navbar-nav">
-            <li><a href="/wares">Wares</a></li>
-        </ul>
-		<div class="collapse navbar-collapse">
-		</div>
-	</div>
-</div>
+<nav class="navbar navbar-default navbar-static-top" role="navigation">
+    <div class="navbar-header">
+        <a class="navbar-brand" href="/">{{.Data.title}}</a>
+    </div>
+    <ul class="nav navbar-nav">
+        <li><a href="/wares">Wares</a></li>
+    </ul>
+</nav>
 {{end}}
