play around with angularjs

--- a/htmlSrc/layout/footer.tmpl.html
+++ b/htmlSrc/layout/footer.tmpl.html
@@ -52,6 +52,7 @@
 <script src="/js/jquery-1.10.2.min.js"></script>
 <script src="/js/angular.min.js"></script>
 <script src="/js/bootstrap.min.js"></script>
+<script src="/js/xrguide.js"></script>
 </body>
 </html>
 {{end}}
