--- a/htmlSrc/layout/layout_main.tmpl.html
+++ b/htmlSrc/layout/layout_main.tmpl.html
@@ -1,6 +1,6 @@
 {{define "head"}}
 <!doctype html>
-<html>
+<html lang="en" ng-app="xrguide">
 <head>
     <title>{{.Data.title}}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
