angular routing, prepare wares

--- a/htmlSrc/layout/layout_main.tmpl.html
+++ b/htmlSrc/layout/layout_main.tmpl.html
@@ -11,7 +11,7 @@
 {{define "body_start"}}
 <body>
 {{template "nav" .}}
-<div id="c" class="container">
+<div id="c" class="container ng-view">
 {{end}}
 {{define "body_end"}}
 </div>
