--- a/htmlSrc/layout/footer.tmpl.html
+++ b/htmlSrc/layout/footer.tmpl.html
@@ -51,6 +51,7 @@
 </footer>
 <script src="/js/jquery-1.10.2.min.js"></script>
 <script src="/js/angular.min.js"></script>
+<script src="/js/angular-route.min.js"></script>
 <script src="/js/bootstrap.min.js"></script>
 <script src="/js/xrguide.js"></script>
 </body>
