--- a/htmlSrc/layout/nav.tmpl.html
+++ b/htmlSrc/layout/nav.tmpl.html
@@ -1,10 +1,10 @@
 {{define "nav"}}
 <nav class="navbar navbar-default navbar-static-top" role="navigation">
     <div class="navbar-header">
-        <a class="navbar-brand" href="/">{{.Data.title}}</a>
+        <a class="navbar-brand" href="/" target="_self">{{.Data.title}}</a>
     </div>
     <ul class="nav navbar-nav">
-        <li><a href="/wares">Wares</a></li>
+        <li><a href="/wares" class="link-wares">Wares</a></li>
     </ul>
 </nav>
 {{end}}
