--- a/htmlSrc/layout/layout_main.tmpl.html
+++ b/htmlSrc/layout/layout_main.tmpl.html
@@ -1,9 +1,22 @@
 {{define "head"}}
 <!doctype html>
-<html lang="en" ng-app="xrguide">
+<html lang="en" xmlns:ng="http://angularjs.org" id="ng-app" ng-app="xrguide">
 <head>
     <title>{{.Data.title}}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!--[if lte IE 8]>
+    <script src="/js/json2.js"></script>
+    <script>
+        document.createElement('ng-include');
+        document.createElement('ng-pluralize');
+        document.createElement('ng-view');
+
+        // Optionally these for CSS
+        document.createElement('ng:include');
+        document.createElement('ng:pluralize');
+        document.createElement('ng:view');
+    </script>
+    <![endif]-->
 	<link rel="stylesheet" href="/css/bootstrap.min.css" />
     <link rel="stylesheet" href="/css/xrguide.css" />
 </head>
