--- a/htmlSrc/layout/nav.tmpl.html
+++ b/htmlSrc/layout/nav.tmpl.html
@@ -5,6 +5,7 @@
     </div>
     <ul class="nav navbar-nav">
         <li><a href="/wares" class="link-wares">Wares</a></li>
+        <li><a href="/stations" class="link-stations">Stations</a></li>
     </ul>
 </nav>
 {{end}}
